# LAWRENCE

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  lk  lk.py  lk_sensor.py  pyproject.toml
apps/desktop/: .gitignore  INTEGRATION.md  MANAGER_FEATURE_REQUESTS.md  MANAGER_FEATURE_REQUESTS.mdx  README.md  index.html  package-lock.json  package.json
apps/desktop/scripts/: bootstrap.sh  build-tauri.sh  desktopctl.sh  dev-tauri.sh  doctor.sh  install-system-deps-ubuntu.sh  stress-ui.sh  test-runtime-contract.sh  ui_bridge.py  web-preview.sh
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/web/: app.js  index.html  styles.css
config/: default.yaml
crates/system-hooks/: Cargo.toml  README.md
crates/system-hooks/src/: lib.rs
data/analaytics/HMM-dynamic-user-interaction-adaptation/: README.md
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  AUDIT.md  AUTONOMY.md  CLI.md  COMMIT_HANDOFF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  N8N_WORKFLOWS.md  OPERATIONS.md  PLAN_COVERAGE.md  RISK_REGISTER.md  SCHEMAS.md  interfaces.md
docs/mockups/: palette.html
docs/papers/: LAWRENCE_v0_1_ieee.aux  LAWRENCE_v0_1_ieee.bbl  LAWRENCE_v0_1_ieee.blg  LAWRENCE_v0_1_ieee.fdb_latexmk  LAWRENCE_v0_1_ieee.fls  LAWRENCE_v0_1_ieee.tex  LAWRENCE_v0_1_refs.bib
infra/llm/: start-llamacpp.sh  status-llamacpp.sh  stop-llamacpp.sh
infra/n8n/: .env.example  docker-compose.yml  start.sh  status.sh  stop.sh
memory/: retrieval.db  retrieval.db-shm  retrieval.db-wal  rolling-20260606-0919.jsonl  rolling-20260607-0701.jsonl  rolling-20260607-1231.jsonl  rolling-20260607-1437.jsonl  rolling-20260607-2232.jsonl  rolling-20260608-0842.jsonl  rolling-20260608-2021.jsonl  rolling-l1.jsonl  rolling-l2.jsonl  tasks.json
memory/bare_logs/: 2026-05-09.md
memory/journal/: 2026-06-07.mdx
modules/connectors/mcp/: README.md
modules/connectors/n8n/: README.md
prototypes/: README.md  gemma4_val_terminal.py
prototypes/bare_assistant/: README.md  __init__.py  audio_capture.py  cli.py  config.py  context_state.py  fast_loop.py  local_files.py  log_writer.py  model_call.py  screen_capture.py  web_retrieval.py
prototypes/bare_assistant/schemas/: assistant_response.schema.json  context_probe.schema.json
prototypes/schemas/: lawrence_val_response.schema.json
scripts/: check.sh  diag-audio.sh  diag-retrieval.sh
services/context-fabric/: README.md
services/kernel/: README.md
services/kernel/lawrence_kernel/: LAWRENCE.code-workspace  __init__.py  config.py  context_fabric.py  facets.py  llm_gateway.py  main.py  memory.py  merge.py  models.py  n8n_client.py  orchestrator.py  policy.py  retrieval.py  routers.py  speech.py  tools.py  web.py  zettelkasten.py
services/kernel/tests/: conftest.py  test_turn_api.py
services/lk/: __init__.py  admin.py  cli.py  config.py  converters.py  ctl.py  launcher.py  launcher_gui.py  lock.py  logger.py  memops.py  model.py  notify.py  profile.py  sensor.py  server.py  tasks.py
services/lk/ctx/: __init__.py  chats.py  distill.py  extract.py  gate.py  notes.py  significance.py  store.py
services/lk/kernel/: ATTACHMENT_INGEST_FEATURE_REQUEST.md  DECODING_OPTIONS_FEATURE_REQUEST.md  __init__.py  elevate.py  invoke.py  journal.py  prompts.py  refine.py  schemas.py  tick.py
services/lk/obs/: __init__.py  audio.py  regions.py  spool.py  vision.py
services/lk/retrieval/: __init__.py  db.py  ingest.py  pipeline.py  ranker.py  web.py
services/llm-gateway/: README.md
services/memory/: README.md
services/obs/: README.md
services/policy/: README.md
services/retrieval/: README.md
services/speech/: README.md
services/tools/: README.md
services/web/: README.md
workflows/: default_turn.yaml
(+63 files in other folders)
