[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawrence-kernel"
version = "0.1.0"
description = "LAWRENCE assistant kernel with parallel facets"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7"
]

[tool.setuptools]
packages = ["lawrence_kernel"]
package-dir = {"" = "services/kernel"}

[tool.pytest.ini_options]
testpaths = ["services/kernel/tests"]
