[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── LAWRENCE CLI kernel (services/lk/) ────────────────────────────────────────
[project]
name = "lawrence-lk"
version = "0.1.0"
description = "LAWRENCE local assistant kernel — CLI + sensor observers + retrieval"
requires-python = ">=3.11"
dependencies = []   # stdlib only for the core path; extras below

[project.scripts]
lk = "lk.cli:main"
lk-sensor = "lk.sensor:main"

[project.optional-dependencies]
# install all optional runtime deps:  pip install -e ".[full]"
vision = [
  "Pillow>=10.0.0",          # PIL for pixel-change scoring
]
audio = [
  "faster-whisper>=1.0.0",   # on-device transcription (CPU-only int8)
]
web = [
  "trafilatura>=1.8.0",      # article extraction (fallback to stdlib html parser)
]
full = [
  "Pillow>=10.0.0",
  "faster-whisper>=1.0.0",
  "trafilatura>=1.8.0",
]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["services"]
include = ["lk*"]

# Offline regression suite lives in services/lk/tests/ and runs via `make test`
# (plain stdlib scripts, no pytest dependency required).

# ── legacy FastAPI kernel (services/kernel/) ───────────────────────────────────
# Run separately:  uvicorn lawrence_kernel.main:app --app-dir services/kernel
# Install:         pip install -e ".[kernel-dev]" --config-settings editable_mode=compat
